# introduction-to-c

./: .gitignore  CMakeLists.txt  Test.c  cc1exo2.c  main.c  pgcd.c  suiteSyracuse.c
dms/: dm1.c  dm1partie0.c  dm1partie1.c
exam0/: functions.c
